--- a/1_module/Makefile
+++ b/1_module/Makefile
@@ -1,5 +1,6 @@
-obj-m += temp.o
+obj-m += temp.o param.o
 
+param-objs := mod_param.o
 all:
 	make -C /lib/modules/${shell uname -r}/build M=${PWD} modules
 clean:
